--- a/ex01/src/index.html
+++ b/ex01/src/index.html
@@ -11,7 +11,7 @@
         color: burlywood;}
     </style>
 
-    <title>Document</title>
+    <title>Gallery's page</title>
 </head>
 <body>
     <h1>Cards Gallery</h1>
